substantial code cleaning done on data.py and ml.py. plot.py and matt_tools could use some work. Added bash scripts for each step of pipeline, as well as an all.sh

--- a/notebooks/catalog.ipynb
+++ b/notebooks/catalog.ipynb
@@ -315,17 +315,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-06-11T18:36:12.523696Z",
-     "start_time": "2018-06-11T18:36:12.520940Z"
+     "end_time": "2018-06-11T21:03:37.912311Z",
+     "start_time": "2018-06-11T21:03:37.909369Z"
     }
    },
    "outputs": [],
    "source": [
-    "par = OrderedDict([\n",
-    "    ('wdir', '/home/mho1/scratch/halo_cnn/'),\n",
+    "par1 = OrderedDict([\n",
+    "    ('wdir', '/home/mho1/scratch/halo_cnn/')\n",
+    "])\n",
+    "par2 = OrderedDict([\n",
     "    ('model_name', 'halo_cnn1d_r')\n",
     "])"
    ]
@@ -356,17 +358,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-11T21:03:44.825923Z",
+     "start_time": "2018-06-11T21:03:44.823360Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "par1.update(par2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-11T21:04:22.532086Z",
+     "start_time": "2018-06-11T21:04:22.528617Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('wdir', '/home/mho1/scratch/halo_cnn/'),\n",
+       "             ('model_name', 'halo_cnn1d_r')])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "par1"
+   ]
   }
  ],
  "metadata": {
