--- a/notebooks/catalog.ipynb
+++ b/notebooks/catalog.ipynb
@@ -21,7 +21,7 @@
     "import numpy.lib.recfunctions as nprf\n",
     "from sklearn import linear_model\n",
     "import matplotlib as mpl\n",
-    "from scipy.stats import gaussian_kde\n",
+    "\n",
     "from importlib import reload\n",
     "import pandas as pd\n",
     "\n",
@@ -38,31 +38,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'tools.cnn_tools' from '/home/mho1/halo_cnn/notebooks/tools/cnn_tools.py'>"
+       "<module 'tools.matt_tools' from '/home/mho1/halo_cnn/notebooks/tools/matt_tools.py'>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import tools.matt_tools as matt\n",
-    "import tools.cnn_tools as cnn\n",
     "\n",
-    "reload(matt)\n",
-    "reload(cnn)"
+    "reload(matt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,18 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_file = os.path.join(wdir,\n",
-    "                         'raw',\n",
+    "                         'data_raw',\n",
     "                         'MDPL2_Rockstar_z=0.117_Macc=1e11.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,182 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>row_id</th>\n",
-       "      <th>rockstarId</th>\n",
-       "      <th>upId</th>\n",
-       "      <th>M200b</th>\n",
-       "      <th>Rvir</th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "      <th>z</th>\n",
-       "      <th>vx</th>\n",
-       "      <th>vy</th>\n",
-       "      <th>vz</th>\n",
-       "      <th>M500c</th>\n",
-       "      <th>Rs</th>\n",
-       "      <th>Macc</th>\n",
-       "      <th>Vacc</th>\n",
-       "      <th>Mvir</th>\n",
-       "      <th>M200c</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>11830268795</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1.716200e+11</td>\n",
-       "      <td>115.780</td>\n",
-       "      <td>0.24644</td>\n",
-       "      <td>0.24207</td>\n",
-       "      <td>267.242</td>\n",
-       "      <td>56.51</td>\n",
-       "      <td>-380.49</td>\n",
-       "      <td>-149.36</td>\n",
-       "      <td>1.219400e+11</td>\n",
-       "      <td>12.480</td>\n",
-       "      <td>1.625800e+11</td>\n",
-       "      <td>98.51</td>\n",
-       "      <td>1.625800e+11</td>\n",
-       "      <td>1.475300e+11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>11821679825</td>\n",
-       "      <td>11821679827</td>\n",
-       "      <td>2.604400e+11</td>\n",
-       "      <td>134.682</td>\n",
-       "      <td>0.80576</td>\n",
-       "      <td>1.62425</td>\n",
-       "      <td>283.605</td>\n",
-       "      <td>63.22</td>\n",
-       "      <td>132.57</td>\n",
-       "      <td>113.04</td>\n",
-       "      <td>1.656000e+11</td>\n",
-       "      <td>8.144</td>\n",
-       "      <td>2.950600e+11</td>\n",
-       "      <td>124.31</td>\n",
-       "      <td>2.559200e+11</td>\n",
-       "      <td>2.137700e+11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>11821797355</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>3.025900e+11</td>\n",
-       "      <td>139.524</td>\n",
-       "      <td>0.05414</td>\n",
-       "      <td>1.74925</td>\n",
-       "      <td>460.638</td>\n",
-       "      <td>344.27</td>\n",
-       "      <td>176.85</td>\n",
-       "      <td>-145.34</td>\n",
-       "      <td>1.972100e+11</td>\n",
-       "      <td>11.197</td>\n",
-       "      <td>2.845200e+11</td>\n",
-       "      <td>121.28</td>\n",
-       "      <td>2.845200e+11</td>\n",
-       "      <td>2.423700e+11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>11821801845</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1.896800e+11</td>\n",
-       "      <td>116.491</td>\n",
-       "      <td>0.46209</td>\n",
-       "      <td>1.73137</td>\n",
-       "      <td>470.666</td>\n",
-       "      <td>253.49</td>\n",
-       "      <td>-31.45</td>\n",
-       "      <td>-230.78</td>\n",
-       "      <td>1.144100e+11</td>\n",
-       "      <td>13.009</td>\n",
-       "      <td>1.656000e+11</td>\n",
-       "      <td>102.83</td>\n",
-       "      <td>1.656000e+11</td>\n",
-       "      <td>1.490400e+11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>11821864805</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>4.365700e+11</td>\n",
-       "      <td>152.337</td>\n",
-       "      <td>0.49521</td>\n",
-       "      <td>1.10364</td>\n",
-       "      <td>564.098</td>\n",
-       "      <td>253.09</td>\n",
-       "      <td>264.77</td>\n",
-       "      <td>217.72</td>\n",
-       "      <td>2.438800e+11</td>\n",
-       "      <td>12.862</td>\n",
-       "      <td>3.703300e+11</td>\n",
-       "      <td>134.21</td>\n",
-       "      <td>3.703300e+11</td>\n",
-       "      <td>3.071000e+11</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   row_id   rockstarId         upId         M200b     Rvir        x        y  \\\n",
-       "0       1  11830268795           -1  1.716200e+11  115.780  0.24644  0.24207   \n",
-       "1       2  11821679825  11821679827  2.604400e+11  134.682  0.80576  1.62425   \n",
-       "2       3  11821797355           -1  3.025900e+11  139.524  0.05414  1.74925   \n",
-       "3       4  11821801845           -1  1.896800e+11  116.491  0.46209  1.73137   \n",
-       "4       5  11821864805           -1  4.365700e+11  152.337  0.49521  1.10364   \n",
-       "\n",
-       "         z      vx      vy      vz         M500c      Rs          Macc  \\\n",
-       "0  267.242   56.51 -380.49 -149.36  1.219400e+11  12.480  1.625800e+11   \n",
-       "1  283.605   63.22  132.57  113.04  1.656000e+11   8.144  2.950600e+11   \n",
-       "2  460.638  344.27  176.85 -145.34  1.972100e+11  11.197  2.845200e+11   \n",
-       "3  470.666  253.49  -31.45 -230.78  1.144100e+11  13.009  1.656000e+11   \n",
-       "4  564.098  253.09  264.77  217.72  2.438800e+11  12.862  3.703300e+11   \n",
-       "\n",
-       "     Vacc          Mvir         M200c  \n",
-       "0   98.51  1.625800e+11  1.475300e+11  \n",
-       "1  124.31  2.559200e+11  2.137700e+11  \n",
-       "2  121.28  2.845200e+11  2.423700e+11  \n",
-       "3  102.83  1.656000e+11  1.490400e+11  \n",
-       "4  134.21  3.703300e+11  3.071000e+11  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dat_MD.head()"
    ]
@@ -288,12 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-11T18:30:59.201985Z",
-     "start_time": "2018-06-11T18:30:59.199639Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from collections import OrderedDict"
@@ -302,12 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-11T18:31:01.234745Z",
-     "start_time": "2018-06-11T18:31:01.232581Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "par = OrderedDict()"
@@ -316,12 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-11T21:03:37.912311Z",
-     "start_time": "2018-06-11T21:03:37.909369Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "par1 = OrderedDict([\n",
@@ -335,12 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-11T18:38:41.081713Z",
-     "start_time": "2018-06-11T18:38:41.078838Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -359,12 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-11T21:03:44.825923Z",
-     "start_time": "2018-06-11T21:03:44.823360Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "par1.update(par2)"
@@ -373,12 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-11T21:04:22.532086Z",
-     "start_time": "2018-06-11T21:04:22.528617Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -395,6 +190,101 @@
    "source": [
     "par1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-12T21:31:14.297227Z",
+     "start_time": "2018-06-12T21:31:14.294727Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-12T21:31:55.101677Z",
+     "start_time": "2018-06-12T21:31:55.098715Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "xml = '''<uws:job xmlns:uws=\"http://www.ivoa.net/xml/UWS/v1.0\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" version=\"1.1\">\n",
+    "  <uws:jobId>1528838918683310284</uws:jobId>\n",
+    "  <uws:runId xsi:nil=\"true\"/>\n",
+    "  <uws:ownerId>maho3</uws:ownerId>\n",
+    "  <uws:phase>PENDING</uws:phase>\n",
+    "  <uws:quote xsi:nil=\"true\"/>\n",
+    "  <uws:creationTime>2018-06-12T23:28:38+02:00</uws:creationTime>\n",
+    "  <uws:startTime xsi:nil=\"true\"/>\n",
+    "  <uws:endTime xsi:nil=\"true\"/>\n",
+    "  <uws:executionDuration>0</uws:executionDuration>\n",
+    "  <uws:destruction xsi:nil=\"true\"/>\n",
+    "  <uws:parameters/>\n",
+    "  <uws:results/>\n",
+    "</uws:job>\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-12T21:35:05.893951Z",
+     "start_time": "2018-06-12T21:35:05.890503Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "soup = BeautifulSoup(xml,'xml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-06-12T21:35:31.228504Z",
+     "start_time": "2018-06-12T21:35:31.225234Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1528838918683310284'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find('uws:jobId').getText()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
