mock catalog generation finished. working on halo_cnn_2d. I forgot to push for a long time

--- a/notebooks/data.ipynb
+++ b/notebooks/data.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-06-08T02:17:39.515503Z",
-     "start_time": "2018-06-08T02:17:34.306094Z"
+     "end_time": "2018-06-20T04:26:32.605658Z",
+     "start_time": "2018-06-20T04:26:26.445970Z"
     },
     "scrolled": true
    },
@@ -44,15 +44,15 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-06-08T02:17:39.586205Z",
-     "start_time": "2018-06-08T02:17:39.517199Z"
+     "end_time": "2018-06-20T04:26:32.618517Z",
+     "start_time": "2018-06-20T04:26:32.608148Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'tools.cnn_tools' from '/home/mho1/halo_cnn/notebooks/tools/cnn_tools.py'>"
+       "<module 'tools.matt_tools' from '/home/mho1/halo_cnn/notebooks/tools/matt_tools.py'>"
       ]
      },
      "execution_count": 2,
@@ -62,10 +62,8 @@
    ],
    "source": [
     "import tools.matt_tools as matt\n",
-    "import tools.cnn_tools as cnn\n",
     "\n",
-    "reload(matt)\n",
-    "reload(cnn)"
+    "reload(matt)"
    ]
   },
   {
@@ -73,8 +71,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-06-08T02:17:39.589419Z",
-     "start_time": "2018-06-08T02:17:39.587579Z"
+     "end_time": "2018-06-20T04:26:32.622846Z",
+     "start_time": "2018-06-20T04:26:32.620595Z"
     }
    },
    "outputs": [],
@@ -94,8 +92,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-06-08T02:17:39.605867Z",
-     "start_time": "2018-06-08T02:17:39.590725Z"
+     "end_time": "2018-06-20T04:26:32.633532Z",
+     "start_time": "2018-06-20T04:26:32.624967Z"
     }
    },
    "outputs": [],
@@ -109,8 +107,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-06-08T02:17:44.828953Z",
-     "start_time": "2018-06-08T02:17:39.607205Z"
+     "end_time": "2018-06-20T04:26:38.135597Z",
+     "start_time": "2018-06-20T04:26:32.635526Z"
     }
    },
    "outputs": [
@@ -127,28 +125,44 @@
     }
    ],
    "source": [
-    "dat_MD = np.load(os.path.join(wdir,'raw','MDPL2_large_z=0.117_reduced.npy'))\n",
+    "dat_MD = np.load(os.path.join(wdir,'data_reduced','MDPL2_large_z=0.117_reduced.npy'))\n",
     "print(sys.getsizeof(dat_MD)/10.**9, ' GB')\n",
     "print(dat_MD.dtype.names, '\\n')\n",
     "\n",
     "# dat_UM = np.load(os.path.join(wdir,'raw','UM_z=0.117_reduced.npy'))\n",
-    "dat_UM = np.load(os.path.join(wdir,'raw','UM_z=0.117_med_reduced.npy'))\n",
+    "dat_UM = np.load(os.path.join(wdir,'data_reduced','UM_z=0.117_med_reduced.npy'))\n",
     "print(sys.getsizeof(dat_UM)/10.**9, ' GB')\n",
     "print(dat_UM.dtype.names)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:17:44.864835Z",
-     "start_time": "2018-06-08T02:17:44.830800Z"
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.046732052  GB\n",
+      "('Mtot', 'hostid', 'id', 'los', 'R200', 'rotation', 'fold', 'Ngal', 'Ngaltrue', 'Msub', 'Rsub', 'vlos', 'sigmav', 'xyzsub', 'Rproj', 'xyproj', 'lum', 'color', 'purity', 'completeness', 'pix', 'boxxyz', 'name', 'Mxray', 'subbox', 'truememb', 'intest', 'intrain', 'redshift', 'PL1pred', 'vhubble', 'Mscale', 'YSZ', 'M500', 'Rs', 'concentration', 'Macc', 'MSZ', 'sig_KR') \n",
+      "\n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "dat_MD = np.load(os.path.join(wdir,'data_raw','MDPL2_large_z=0.117.npy'))\n",
+    "print(sys.getsizeof(dat_MD)/10.**9, ' GB')\n",
+    "print(dat_MD.dtype.names, '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "dat_hmf = np.loadtxt(os.path.join(wdir, 'raw', 'dn_by_dm_md_om=0.307_s8=0.823_z=0.117.txt'))\n",
+    "dat_hmf = np.loadtxt(os.path.join(wdir, 'data_raw', 'dn_by_dm_md_om=0.307_s8=0.823_z=0.117.txt'))\n",
     "\n",
     "x_hmf, y_hmf = zip(*dat_hmf)"
    ]
@@ -166,10 +180,6 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-07T19:13:04.056010Z",
-     "start_time": "2018-06-07T19:13:04.043816Z"
-    },
     "code_folding": [
      19
     ],
@@ -243,12 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:17:46.830456Z",
-     "start_time": "2018-06-08T02:17:44.866762Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -316,12 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:17:47.243250Z",
-     "start_time": "2018-06-08T02:17:46.831941Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -388,12 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:17:47.549702Z",
-     "start_time": "2018-06-08T02:17:47.245013Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -438,12 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:03.075349Z",
-     "start_time": "2018-06-08T02:17:47.551602Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -506,12 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:03.079341Z",
-     "start_time": "2018-06-08T02:18:03.077048Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dat = dat_UM"
@@ -520,12 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:03.219864Z",
-     "start_time": "2018-06-08T02:18:03.080567Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -547,12 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:03.223578Z",
-     "start_time": "2018-06-08T02:18:03.221357Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "i = np.random.randint(0, len(dat))"
@@ -561,12 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:03.924665Z",
-     "start_time": "2018-06-08T02:18:03.224879Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -665,12 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:05.049729Z",
-     "start_time": "2018-06-08T02:18:03.926155Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -723,12 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:05.053130Z",
-     "start_time": "2018-06-08T02:18:05.051165Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "img_savedir = '/home/mho1/temp'"
@@ -737,12 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:07.777174Z",
-     "start_time": "2018-06-08T02:18:05.054445Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -781,12 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:08.039995Z",
-     "start_time": "2018-06-08T02:18:07.778721Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -826,12 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:08.519500Z",
-     "start_time": "2018-06-08T02:18:08.041712Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -905,12 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:08.547473Z",
-     "start_time": "2018-06-08T02:18:08.520782Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dat = dat_UM\n",
@@ -923,12 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:09.358262Z",
-     "start_time": "2018-06-08T02:18:08.548882Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1044,12 +979,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-07T19:03:36.370413Z",
-     "start_time": "2018-06-07T19:03:36.367976Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Model Predictions"
    ]
@@ -1057,12 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:09.361497Z",
-     "start_time": "2018-06-08T02:18:09.359636Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model_name='halo_cnn1d_r'"
@@ -1071,12 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:09.377362Z",
-     "start_time": "2018-06-08T02:18:09.362789Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data_file = os.path.join(wdir, 'saved_models', model_name, 'model_data',\n",
@@ -1087,12 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:09.750730Z",
-     "start_time": "2018-06-08T02:18:09.378619Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "out = np.load(data_file, \n",
@@ -1104,12 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:09.767175Z",
-     "start_time": "2018-06-08T02:18:09.752116Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1145,10 +1055,6 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:10.148153Z",
-     "start_time": "2018-06-08T02:18:09.768485Z"
-    },
     "code_folding": []
    },
    "outputs": [
@@ -1215,12 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:10.340603Z",
-     "start_time": "2018-06-08T02:18:10.149392Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1262,12 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:10.353830Z",
-     "start_time": "2018-06-08T02:18:10.341886Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pred_err = (10.**out['y_pred'])/(10.**out['y_test']) - 1.\n",
@@ -1278,12 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T02:18:11.056479Z",
-     "start_time": "2018-06-08T02:18:10.355196Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1347,12 +1238,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T03:23:06.748047Z",
-     "start_time": "2018-06-08T03:23:06.397147Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1407,12 +1293,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T04:23:58.088763Z",
-     "start_time": "2018-06-08T04:23:57.852015Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1464,12 +1345,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T06:03:22.317984Z",
-     "start_time": "2018-06-08T06:03:22.310798Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1492,12 +1368,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-06-08T06:03:13.389513Z",
-     "start_time": "2018-06-08T06:03:13.384844Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1531,7 +1402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   },
   "toc": {
    "nav_menu": {},
