did some work for joanne cohn

--- a/notebooks/paper.ipynb
+++ b/notebooks/paper.ipynb
@@ -9,99 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-14T15:09:02.331412Z",
-     "start_time": "2019-02-14T15:09:02.312791Z"
+     "end_time": "2019-03-06T07:51:19.746744Z",
+     "start_time": "2019-03-06T07:51:15.435063Z"
     },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/ipykernel_launcher.py:20: UserWarning: \n",
-      "This call to matplotlib.use() has no effect because the backend has already\n",
-      "been chosen; matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
-      "or matplotlib.backends is imported for the first time.\n",
-      "\n",
-      "The backend was *originally* set to 'module://ipykernel.pylab.backend_inline' by the following code:\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/runpy.py\", line 193, in _run_module_as_main\n",
-      "    \"__main__\", mod_spec)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/runpy.py\", line 85, in _run_code\n",
-      "    exec(code, run_globals)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/ipykernel_launcher.py\", line 16, in <module>\n",
-      "    app.launch_new_instance()\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/traitlets/config/application.py\", line 658, in launch_instance\n",
-      "    app.start()\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/ipykernel/kernelapp.py\", line 486, in start\n",
-      "    self.io_loop.start()\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/tornado/platform/asyncio.py\", line 127, in start\n",
-      "    self.asyncio_loop.run_forever()\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/asyncio/base_events.py\", line 422, in run_forever\n",
-      "    self._run_once()\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/asyncio/base_events.py\", line 1432, in _run_once\n",
-      "    handle._run()\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/asyncio/events.py\", line 145, in _run\n",
-      "    self._callback(*self._args)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/tornado/platform/asyncio.py\", line 117, in _handle_events\n",
-      "    handler_func(fileobj, events)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/tornado/stack_context.py\", line 276, in null_wrapper\n",
-      "    return fn(*args, **kwargs)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/zmq/eventloop/zmqstream.py\", line 450, in _handle_events\n",
-      "    self._handle_recv()\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/zmq/eventloop/zmqstream.py\", line 480, in _handle_recv\n",
-      "    self._run_callback(callback, msg)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/zmq/eventloop/zmqstream.py\", line 432, in _run_callback\n",
-      "    callback(*args, **kwargs)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/tornado/stack_context.py\", line 276, in null_wrapper\n",
-      "    return fn(*args, **kwargs)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/ipykernel/kernelbase.py\", line 283, in dispatcher\n",
-      "    return self.dispatch_shell(stream, msg)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/ipykernel/kernelbase.py\", line 233, in dispatch_shell\n",
-      "    handler(stream, idents, msg)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/ipykernel/kernelbase.py\", line 399, in execute_request\n",
-      "    user_expressions, allow_stdin)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/ipykernel/ipkernel.py\", line 208, in do_execute\n",
-      "    res = shell.run_cell(code, store_history=store_history, silent=silent)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/ipykernel/zmqshell.py\", line 537, in run_cell\n",
-      "    return super(ZMQInteractiveShell, self).run_cell(*args, **kwargs)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2662, in run_cell\n",
-      "    raw_cell, store_history, silent, shell_futures)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2785, in _run_cell\n",
-      "    interactivity=interactivity, compiler=compiler, result=result)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2903, in run_ast_nodes\n",
-      "    if self.run_code(code, result):\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2963, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"<ipython-input-5-8af5fd3405ec>\", line 26, in <module>\n",
-      "    get_ipython().run_line_magic('matplotlib', 'inline')\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2131, in run_line_magic\n",
-      "    result = fn(*args,**kwargs)\n",
-      "  File \"<decorator-gen-107>\", line 2, in matplotlib\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/IPython/core/magic.py\", line 187, in <lambda>\n",
-      "    call = lambda f, *a, **k: f(*a, **k)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/IPython/core/magics/pylab.py\", line 99, in matplotlib\n",
-      "    gui, backend = self.shell.enable_matplotlib(args.gui)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 3051, in enable_matplotlib\n",
-      "    pt.activate_matplotlib(backend)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/IPython/core/pylabtools.py\", line 311, in activate_matplotlib\n",
-      "    matplotlib.pyplot.switch_backend(backend)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/matplotlib/pyplot.py\", line 231, in switch_backend\n",
-      "    matplotlib.use(newbackend, warn=False, force=True)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/matplotlib/__init__.py\", line 1410, in use\n",
-      "    reload(sys.modules['matplotlib.backends'])\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/importlib/__init__.py\", line 166, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"/home/mho1/.conda/envs/jupy/lib/python3.6/site-packages/matplotlib/backends/__init__.py\", line 16, in <module>\n",
-      "    line for line in traceback.format_stack()\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -137,11 +53,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-14T13:34:47.190738Z",
-     "start_time": "2019-02-14T13:34:47.186140Z"
+     "end_time": "2019-03-06T07:51:22.138766Z",
+     "start_time": "2019-03-06T07:51:22.128353Z"
     }
    },
    "outputs": [
@@ -151,7 +67,7 @@
        "<module 'tools.matt_tools' from '/home/mho1/halo_cnn/notebooks/tools/matt_tools.py'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,11 +80,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-14T13:34:47.549593Z",
-     "start_time": "2019-02-14T13:34:47.547361Z"
+     "end_time": "2019-03-06T07:51:23.732900Z",
+     "start_time": "2019-03-06T07:51:23.729635Z"
     }
    },
    "outputs": [],
@@ -185,11 +101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-14T13:34:48.600769Z",
-     "start_time": "2019-02-14T13:34:48.598307Z"
+     "end_time": "2019-03-06T07:51:27.516941Z",
+     "start_time": "2019-03-06T07:51:27.513670Z"
     }
    },
    "outputs": [],
@@ -1907,7 +1823,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Loss curves"
    ]
@@ -1920,6 +1838,7 @@
      "end_time": "2019-02-14T15:09:08.207022Z",
      "start_time": "2019-02-14T15:09:07.985931Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1952,7 +1871,8 @@
     "ExecuteTime": {
      "end_time": "2019-02-14T15:09:08.852142Z",
      "start_time": "2019-02-14T15:09:08.844198Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1978,7 +1898,8 @@
     "ExecuteTime": {
      "end_time": "2019-02-14T15:12:46.347935Z",
      "start_time": "2019-02-14T15:12:45.978358Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2034,14 +1955,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -2061,11 +1986,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-14T14:59:14.768898Z",
-     "start_time": "2019-02-14T14:59:14.756643Z"
+     "end_time": "2019-03-06T07:51:40.754476Z",
+     "start_time": "2019-03-06T07:51:40.741252Z"
     },
     "scrolled": true
    },
@@ -2086,11 +2011,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-14T14:59:16.134676Z",
-     "start_time": "2019-02-14T14:59:15.433219Z"
+     "end_time": "2019-03-06T07:51:49.092143Z",
+     "start_time": "2019-03-06T07:51:48.671060Z"
     }
    },
    "outputs": [
@@ -2145,7 +2070,7 @@
     "\n",
     "plt.tight_layout()\n",
     "\n",
-    "f.savefig(os.path.join(imdir,'pred_1d.pdf'),bbox_inches='tight', dpi=300)"
+    "# f.savefig(os.path.join(imdir,'pred_1d.pdf'),bbox_inches='tight', dpi=300)"
    ]
   },
   {
