directory rearrangement. beginning to apply to observation data

--- a/notebooks/catalog.ipynb
+++ b/notebooks/catalog.ipynb
@@ -5746,7 +5746,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
     "scrolled": true
    },
    "source": [
@@ -5756,8 +5755,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Cylindrical"
@@ -5994,9 +5992,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Cartesian"
    ]
@@ -6004,9 +6000,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cat = contam_cat\n",
@@ -6017,9 +6011,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mesh = np.mgrid[-cat.par['vcut'] : cat.par['vcut'] : par['shape'][0]*1j,\n",
@@ -6033,9 +6025,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -6058,7 +6048,6 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -6204,16 +6193,13 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "hidden": true,
     "scrolled": false
    },
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Cartesian KDE, Cylindrical sampling"
    ]
@@ -6221,9 +6207,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cat = contam_cat\n",
@@ -6234,9 +6218,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -6267,9 +6249,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -6292,7 +6272,6 @@
    "cell_type": "code",
    "execution_count": 116,
    "metadata": {
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -6419,9 +6398,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fold_ind = pd.Series(np.random.randint(0, 10, len(cat.prop['rockstarId'].unique())), \n",
@@ -6438,9 +6415,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -6465,9 +6440,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -6487,9 +6460,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -6509,18 +6480,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
