--- a/notebooks/halo_cnn_build.ipynb
+++ b/notebooks/halo_cnn_build.ipynb
@@ -1617,9 +1617,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1634,6 +1634,7 @@
    "version": "3.6.5"
   },
   "toc": {
+   "base_numbering": 1,
    "nav_menu": {},
    "number_sections": true,
    "sideBar": true,
